--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 
 # Site
 title: AaronW's Blog
-subtitle: Thanks for comming
-description:
-keywords:
+subtitle: Thanks for your coming
+description: Try everything we can do.
+keywords: AaronW, Blog
 author: AaronW
 language: zh-Hans
 timezone: Asia/Shanghai
